# jeison_verdugo_proyecto1-

./: .gitignore  README.md  pyproject.toml
App/: contratos.py
Codigo/: Tarea1.py  Tarea2.ipynb
Documentacion/: .env
