[tool.poetry]
name = "jeison-verdugo-proyecto1-"
version = "0.1.0"
description = "Mi segundo proyecto ciencia de datos"
authors = ["JeisonV08 <perezjeison@live.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
ucimlrepo = "^0.0.7"
sodapy = "^2.2.0"
python-dotenv = "^1.0.1"
streamlit = "^1.36.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
